--- a/src/components/manageManager/ManageManager.css
+++ b/src/components/manageManager/ManageManager.css
@@ -1,52 +1,53 @@
 .manage-manager-container {
-  margin: 5px 0 0 0;
-}
-
-.manage-manager-container .filter-container {
-  box-shadow: 0px 3px 8px #a6a6a6;
-}
-
-.manage-manager-container .button-container {
-  display: flex;
-  flex-direction: row-reverse;
+  padding: 5px 0 0 0;
 }
 
 .manage-manager-container .content-container {
   box-shadow: 0px 3px 8px #a6a6a6;
 }
 
+.manage-manager-container .content-container .button-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 .manage-manager-container .content-container .pagination {
   margin-bottom: 0;
 }
 
-.manage-manager-container .table-container {
-  height: 70vh;
+.manage-manager-container .content-container .table-container {
 }
 
-.manage-manager-container .table-container thead {
+.manage-manager-container .content-container .table-container .loading {
+  height: 100%;
+}
+
+.manage-manager-container .content-container .table-container .table {
+  margin: 0;
+}
+
+.manage-manager-container .content-container .table-container thead {
   background-color: var(--main-color);
 }
 
-.manage-manager-container .table-container th {
+.manage-manager-container .content-container .table-container th {
   text-align: center;
 }
 
-.manage-manager-container .table-container td {
+.manage-manager-container .content-container .table-container td {
   text-align: center;
   vertical-align: middle;
 }
 
-.manage-manager-container .table-container .action-button-container {
+.manage-manager-container
+  .content-container
+  .table-container
+  .action-button-container {
   display: flex;
   justify-content: space-evenly;
 }
 
-.manage-manager-container .pagination-container {
-  float: right;
-}
-
 /*Tooltip CSS*/
-
 .manager-edit-button {
   font-size: 10px;
   letter-spacing: 1px;
@@ -90,4 +91,14 @@
 
 .manager-delete-button .arrow::before {
   border-bottom-color: red;
+}
+
+.manager-detail-modal {
+  width: 60vw;
+  max-width: none !important;
+}
+
+.manager-detail-modal .form-label {
+  font-size: 18px;
+  font-weight: 700;
 }
