--- a/src/components/manageService/ManageService.css
+++ b/src/components/manageService/ManageService.css
@@ -1,52 +1,53 @@
 .manage-service-container {
-  margin: 5px 0 0 0;
-}
-
-.manage-service-container .filter-container {
-  box-shadow: 0px 3px 8px #a6a6a6;
-}
-
-.manage-service-container .button-container {
-  display: flex;
-  flex-direction: row-reverse;
+  padding: 5px 0 0 0;
 }
 
 .manage-service-container .content-container {
   box-shadow: 0px 3px 8px #a6a6a6;
 }
 
+.manage-service-container .content-container .button-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 .manage-service-container .content-container .pagination {
   margin-bottom: 0;
 }
 
-.manage-service-container .table-container {
-  height: 70vh;
+.manage-service-container .content-container .table-container {
 }
 
-.manage-service-container .table-container thead {
+.manage-service-container .content-container .table-container .loading {
+  height: 100%;
+}
+
+.manage-service-container .content-container .table-container .table {
+  margin: 0;
+}
+
+.manage-service-container .content-container .table-container thead {
   background-color: var(--main-color);
 }
 
-.manage-service-container .table-container th {
+.manage-service-container .content-container .table-container th {
   text-align: center;
 }
 
-.manage-service-container .table-container td {
+.manage-service-container .content-container .table-container td {
   text-align: center;
   vertical-align: middle;
 }
 
-.manage-service-container .table-container .action-button-container {
+.manage-service-container
+  .content-container
+  .table-container
+  .action-button-container {
   display: flex;
   justify-content: space-evenly;
 }
 
-.manage-service-container .pagination-container {
-  float: right;
-}
-
 /*Tooltip CSS*/
-
 .service-edit-button {
   font-size: 10px;
   letter-spacing: 1px;
@@ -60,4 +61,34 @@
 
 .service-edit-button .arrow::before {
   border-bottom-color: blue;
+}
+
+.service-schedule-button {
+  font-size: 10px;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+
+.service-schedule-button .tooltip-inner {
+  background-color: green;
+  color: #fff;
+}
+
+.service-schedule-button .arrow::before {
+  border-bottom-color: green;
+}
+
+.service-delete-button {
+  font-size: 10px;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+
+.service-delete-button .tooltip-inner {
+  background-color: red;
+  color: #fff;
+}
+
+.service-delete-button .arrow::before {
+  border-bottom-color: red;
 }
