--- a/src/components/confirmCreateBooking/ConfirmCreateBooking.css
+++ b/src/components/confirmCreateBooking/ConfirmCreateBooking.css
@@ -3,32 +3,36 @@
   max-width: none !important;
 }
 
-.confirm-create-booking-container .modal-content-container {
-  /* height: 90vh; */
-}
-
-.confirm-create-booking-container
-  .modal-content-container
-  .modal-body-container {
-  /* height: 80%; */
-}
-
-.confirm-create-booking-container
-  .modal-content-container
-  .modal-body-container
-  .form-label {
+.confirm-create-booking-container .form-label {
   font-size: 18px;
   font-weight: 700;
 }
 
-.confirm-create-booking-container .modal-content-container .confirm-button {
-  width: 15%;
+.confirm-create-booking-container .table-container {
 }
 
-.confirm-create-booking-container
-  .modal-content-container
-  .confirm-button
-  .spinner-border {
+.confirm-create-booking-container .table-container .table {
+  margin: 0;
+}
+
+.confirm-create-booking-container .table-container thead {
+  background-color: var(--main-color);
+}
+
+.confirm-create-booking-container .table-container th {
+  text-align: center;
+}
+
+.confirm-create-booking-container .table-container td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.confirm-create-booking-container button {
+  width: 100px;
+}
+
+.confirm-create-booking-container button .spinner-border {
   width: 20px;
   height: 20px;
   border: 3px solid currentColor;
