--- a/src/components/createAccessory/CreateAccessory.css
+++ b/src/components/createAccessory/CreateAccessory.css
@@ -1,24 +1,39 @@
 .create-accessory-container {
-  width: 60vw;
-  max-width: none !important;
+  padding: 5px 0 0 0;
 }
 
-.create-accessory-container .modal-content-container {
-  /* height: 90vh; */
+.create-accessory-container .accessory-info-container {
+  box-shadow: 0px 3px 8px #a6a6a6;
 }
 
-.create-accessory-container .modal-content-container .modal-body-container {
-  /* height: 80%; */
+.create-accessory-container .accessory-image-container {
+  box-shadow: 0px 3px 8px #a6a6a6;
+}
+
+.create-accessory-container .accessory-image-container img {
+  max-height: 250px;
+  width: auto;
+}
+
+.create-accessory-container .accessory-image-container .button-container {
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .create-accessory-container
-  .modal-content-container
-  .modal-body-container
-  .form-label {
-  font-size: 18px;
-  font-weight: 700;
+  .accessory-image-container
+  .button-container
+  button {
+  width: 120px;
 }
 
-.create-accessory-container .modal-content-container .accessory-type-dropdown {
-  width: auto;
+.create-accessory-container
+  .accessory-image-container
+  .button-container
+  button
+  .spinner-border {
+  width: 20px;
+  height: 20px;
+  border: 3px solid currentColor;
+  border-right-color: transparent;
 }
