--- a/src/components/createStaff/CreateStaff.css
+++ b/src/components/createStaff/CreateStaff.css
@@ -14,11 +14,11 @@
   border-right-color: transparent;
 }
 
-.create-staff-container .confirm-button {
-  width: 15%;
+.create-staff-container button {
+  width: 100px;
 }
 
-.create-staff-container .confirm-button .spinner-border {
+.create-staff-container button .spinner-border {
   width: 20px;
   height: 20px;
   border: 3px solid currentColor;
