--- a/src/components/customChart/CustomChart.css
+++ b/src/components/customChart/CustomChart.css
@@ -1,11 +1,11 @@
 .custom-chart-container {
-  margin: 50px 0 0 0;
-  
-  box-shadow: 0px 3px 8px #a6a6a6;
+  padding: 30px 0 0 0;
 }
 
 .custom-chart-container .chart-request-container {
-  padding-bottom: 0;
+  box-shadow: 0px 3px 8px #a6a6a6;
+  height: 745px;
+  /* padding-bottom: 0; */
 }
 
 .custom-chart-container .chart-request-container .date-item {
@@ -14,22 +14,18 @@
   padding: 0 1.25rem;
 }
 
-.custom-chart-container .request-type-items-container {
+.custom-chart-container .chart-request-container .request-type-items-container {
   margin-top: 20px;
   justify-content: space-around;
 }
 
-.custom-chart-container .line-chart-container {
-  height: 85vh;
-}
-
-.custom-chart-container .line-chart-container .loading {
+.custom-chart-container .chart-request-container .loading {
   height: auto;
   width: 100%;
   padding: 10px 0 0 0;
   text-align: center;
 }
 
-.custom-chart-container .line-chart-container .loading-text {
+.custom-chart-container .chart-request-container .loading .loading-text {
   font-size: 30px;
 }
