--- a/src/components/orderDetail/OrderDetail.css
+++ b/src/components/orderDetail/OrderDetail.css
@@ -1,53 +1,131 @@
 .order-detail-container {
-  margin: 10px 0 0 0;
+  padding: 5px 0 0 0;
 }
 
-.order-detail-container .order-detail-body-container {
+.order-detail-container .booking-info-container {
+  box-shadow: 0px 3px 8px #a6a6a6;
 }
 
-.order-detail-container .order-detail-body-container .loading {
-  height: auto;
+.order-detail-container .booking-info-container .loading {
+  height: 100%;
+  padding: 0;
 }
 
-.order-detail-container .order-detail-body-container .dropdown .btn:disabled {
-  width: 140px;
-  text-align: left;
-  opacity: 1;
+.order-detail-container .booking-info-container .loading .loading-text {
+  font-size: 30px;
 }
 
-.order-detail-container .order-detail-body-container thead {
+.order-detail-container .order-info-container {
+  box-shadow: 0px 3px 8px #a6a6a6;
+}
+
+.order-detail-container .order-info-container .staff-busy-container {
+  color: red;
+}
+
+.order-detail-container .order-info-container .loading {
+  height: 100%;
+  padding: 0;
+}
+
+.order-detail-container .order-info-container .loading .loading-text {
+  font-size: 30px;
+}
+
+.order-detail-container .order-info-container .table-container {
+}
+
+.order-detail-container .order-info-container .table-container .table {
+  margin: 0;
+}
+
+.order-detail-container .order-info-container .table-container thead {
   background-color: var(--main-color);
 }
 
-.order-detail-container .order-detail-body-container th {
+.order-detail-container .order-info-container .table-container th {
   text-align: center;
 }
 
-.order-detail-container .order-detail-body-container td {
+.order-detail-container .order-info-container .table-container td {
   text-align: center;
   vertical-align: middle;
 }
-.order-detail-container .order-detail-body-container .step-progress-container {
+
+.order-detail-container
+  .order-info-container
+  .table-container
+  .td-service-name {
+  cursor: pointer;
 }
 
-.order-detail-container .order-detail-body-container .button-container {
+.order-detail-container
+  .order-info-container
+  .table-container
+  .td-service-name:hover {
+  background-color: #d9d9d9;
+}
+
+.order-detail-container
+  .order-info-container
+  .table-container
+  .action-button-container {
   display: flex;
-  flex-direction: row-reverse;
-}
-.order-detail-container
-  .order-detail-body-container
-  .button-container
-  .confirm-button {
-  width: 15%;
+  justify-content: space-evenly;
 }
 
-.order-detail-container
-  .order-detail-body-container
-  .button-container
-  .confirm-button
-  .spinner-border {
+.service-detail-modal {
+  width: 60vw;
+  max-width: none !important;
+}
+
+.service-detail-modal .form-label {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.service-detail-modal .table-container {
+}
+
+.service-detail-modal .table-container .table {
+  margin: 0;
+}
+
+.service-detail-modal .table-container thead {
+  background-color: var(--main-color);
+}
+.service-detail-modal .table-container th {
+  text-align: center;
+}
+
+.service-detail-modal .table-container td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.order-detail-container .order-info-container .confirm-button {
+  width: 100px;
+}
+
+.order-detail-container .order-info-container .confirm-button .spinner-border {
   width: 20px;
   height: 20px;
   border: 3px solid currentColor;
   border-right-color: transparent;
+}
+
+/*Tooltip CSS*/
+.accessory-edit-button {
+  font-size: 10px;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+
+.accessory-edit-button .tooltip-inner {
+  background-color: blue;
+  color: #fff;
+}
+
+.accessory-edit-button .arrow::before {
+  border-bottom-color: blue;
 }
