--- a/src/components/serviceDetail/ServiceDetail.css
+++ b/src/components/serviceDetail/ServiceDetail.css
@@ -1,10 +1,9 @@
 .service-detail-container {
-  margin: 5px 0 0 0;
+  padding: 5px 0 0 0;
 }
 
 .service-detail-container .service-info-container {
   box-shadow: 0px 3px 8px #a6a6a6;
-  height: 40vh;
 }
 
 .service-detail-container .service-info-container .loading {
@@ -19,8 +18,6 @@
 /*Table*/
 .service-detail-container .service-table-container {
   box-shadow: 0px 3px 8px #a6a6a6;
-  height: 45vh;
-  overflow-y: scroll;
 }
 
 .service-detail-container .service-table-container .loading {
@@ -53,11 +50,17 @@
   flex-direction: row-reverse;
 }
 
-.service-detail-container .service-button-container {
-  box-shadow: 0px 3px 8px #a6a6a6;
+.service-detail-container .service-table-container .button-container button {
+  width: 100px;
 }
 
-.service-detail-container .service-button-container .button-container {
-  display: flex;
-  flex-direction: row-reverse;
+.service-detail-container
+  .service-table-container
+  .button-container
+  button
+  .spinner-border {
+  width: 20px;
+  height: 20px;
+  border: 3px solid currentColor;
+  border-right-color: transparent;
 }
