--- a/src/components/staffDetail/StaffDetail.css
+++ b/src/components/staffDetail/StaffDetail.css
@@ -1,9 +1,8 @@
 .staff-detail-container {
-  margin: 5px 0 0 0;
+  padding: 5px 0 0 0;
 }
 
 .staff-detail-container .staff-info-container {
-  height: 20vh;
   box-shadow: 0px 3px 8px #a6a6a6;
 }
 
@@ -42,8 +41,6 @@
 }
 
 .staff-detail-container .card-table-container .table-container {
-  max-height: 389px;
-  overflow-y: scroll;
 }
 
 .staff-detail-container .card-table-container .table-container .loading {
