finish fix layout 2 ver 2

--- a/src/components/accessoryDetail/AccessoryDetail.css
+++ b/src/components/accessoryDetail/AccessoryDetail.css
@@ -29,8 +29,10 @@
 }
 
 .accessory-detail-container .accessory-image-container img {
-  max-height: 250px;
-  width: auto;
+  /* max-height: 250px;
+  width: auto; */
+  max-width: 100%;
+  height: auto;
 }
 
 .accessory-detail-container .accessory-image-container .button-container {
