--- a/src/components/manageStaffSchedule/ManageStaffSchedule.css
+++ b/src/components/manageStaffSchedule/ManageStaffSchedule.css
@@ -36,6 +36,7 @@
 
 .manage-staff-schedule-container .modal-content-container .modal-body-container th {
   text-align: center;
+  vertical-align: middle;
 }
 
 .manage-staff-schedule-container .modal-content-container .modal-body-container td {
