--- a/src/components/manageAccessory/ManageAccessory.css
+++ b/src/components/manageAccessory/ManageAccessory.css
@@ -32,6 +32,7 @@
 
 .manage-accessory-container .content-container .table-container th {
   text-align: center;
+  vertical-align: middle;
 }
 
 .manage-accessory-container .content-container .table-container td {
