--- a/src/components/scheduleForOrder/ScheduleForOrder.css
+++ b/src/components/scheduleForOrder/ScheduleForOrder.css
@@ -109,6 +109,7 @@
 
 .schedule-for-order .modal-content-container .modal-body-container th {
   text-align: center;
+  vertical-align: middle;
 }
 
 .schedule-for-order .modal-content-container .modal-body-container .date-th {
