--- a/src/components/orderDetail/OrderDetail.css
+++ b/src/components/orderDetail/OrderDetail.css
@@ -6,6 +6,11 @@
   box-shadow: 0px 3px 8px #a6a6a6;
 }
 
+.order-detail-container .booking-info-container .form-label {
+  font-size: 18px;
+  font-weight: 700;
+}
+
 .order-detail-container .booking-info-container .loading {
   height: 100%;
   padding: 0;
@@ -15,8 +20,34 @@
   font-size: 30px;
 }
 
+.order-detail-container .booking-info-container .table-container {
+}
+
+.order-detail-container .booking-info-container .table-container .table {
+  margin: 0;
+}
+
+.order-detail-container .booking-info-container .table-container thead {
+  background-color: var(--main-color);
+}
+
+.order-detail-container .booking-info-container .table-container th {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.order-detail-container .booking-info-container .table-container td {
+  text-align: center;
+  vertical-align: middle;
+}
+
 .order-detail-container .order-info-container {
   box-shadow: 0px 3px 8px #a6a6a6;
+}
+
+.order-detail-container .order-info-container .form-label {
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .order-detail-container .order-info-container .staff-busy-container {
