--- a/src/components/serviceDetail/ServiceDetail.css
+++ b/src/components/serviceDetail/ServiceDetail.css
@@ -65,3 +65,14 @@
   border: 3px solid currentColor;
   border-right-color: transparent;
 }
+
+.service-modal button {
+  width: 100px;
+}
+
+.service-modal button .spinner-border {
+  width: 20px;
+  height: 20px;
+  border: 3px solid currentColor;
+  border-right-color: transparent;
+}
